modal z-index fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -31,6 +31,10 @@
   z-index: 1000;
   transform: translateY(25%);
   opacity: 0;
+
+  html.has-modal-open & {
+    z-index: 1;
+  }
   
   @media screen and (max-width: 599px) {
     max-width: calc(100% - 2 * var(--wp--preset--spacing--outer));
